--- a/android/app/src/main/res/values-v31/styles.xml
+++ b/android/app/src/main/res/values-v31/styles.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Android 12+ SplashScreen API -->
-    <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">
-        <!-- 배경색 (흰색) -->
-        <item name="android:windowBackground">@drawable/launch_background</item>
+    <style name="LaunchTheme" parent="@android:style/Theme.DeviceDefault.Light.NoActionBar">
+        <!-- Android 12+ 기본 스플래시 배경색 (Flutter 스플래시와 동일하게) -->
+        <item name="android:windowSplashScreenBackground">@color/splash_bg</item>
         
-        <!-- Android 12+ 스플래시 아이콘 비활성화 -->
-        <item name="android:windowSplashScreenAnimatedIcon">@null</item>
-        <item name="android:windowSplashScreenBackground">@android:color/white</item>
+        <!-- 투명 아이콘으로 기본 앱 아이콘 숨기기 -->
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/splash_icon_transparent</item>
+        
+        <!-- 아이콘 애니메이션 시간 최소화 -->
+        <item name="android:windowSplashScreenAnimationDuration">0</item>
+        
+        <!-- 브랜딩 이미지 없음 -->
+        <item name="android:windowSplashScreenBrandingImage">@null</item>
     </style>
-
-    <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
-        <item name="android:windowBackground">?android:colorBackground</item>
+    
+    <!-- Flutter 화면 뒤 배경 -->
+    <style name="NormalTheme" parent="@android:style/Theme.DeviceDefault.Light.NoActionBar">
+        <item name="android:windowBackground">@color/splash_bg</item>
     </style>
 
 </resources>
